SPDI-120423 Support replication consumer in daemon shell